--- a/FirstAspNetCore31/Views/Home/Index.cshtml
+++ b/FirstAspNetCore31/Views/Home/Index.cshtml
@@ -4,5 +4,8 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
+	<hr/>
+	<h2>Deploying through CLI Commands</h2>
+	<br/>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
