Added Configuration values for testing

--- a/FirstAspNetCore31/Views/Home/Index.cshtml
+++ b/FirstAspNetCore31/Views/Home/Index.cshtml
@@ -5,7 +5,36 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
 	<hr/>
-	<h2>Deployed through CLI Commands</h2>
+	<h2>Deployed through VS.Net</h2>
 	<br/>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+    <center>
+        <table border="1">
+            <thead>
+                <tr>
+                    <td colspan="2" align="center" style="background-color:yellow;">
+                        <h4>Testing Configuration</h4>
+                    </td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td align="left">
+                        Test1:
+                    </td>
+                    <td align="left">
+                        <b>@ViewBag.Test1Value</b>
+                    </td>
+                </tr>
+                <tr>
+                    <td align="left">
+                        Test2:
+                    </td>
+                    <td align="left">
+                        <b>@ViewBag.Test2Value</b>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </center>
 </div>
